<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.rslakra</groupId>
    <artifactId>dAppSuite</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>The ${project.artifactId} Project</name>
    <url>https://github.com/rslakra/AppSuite</url>

    <!-- Modules -->
    <modules>
        <module>Core</module>
        <module>MimeCraft</module>
        <module>HttpServer</module>
        <module>Jdk</module>
    </modules>

    <!-- Properties -->
    <properties>
        <java.version>11</java.version>
        <maven.compiler.target>11</maven.compiler.target>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.release>11</maven.compiler.release>
        <dLogger.version>1.1-SNAPSHOT</dLogger.version>

        <slf4j-api.version>1.7.32</slf4j-api.version>
        <logback-classic.version>1.2.8</logback-classic.version>
        <lombok-version>1.18.22</lombok-version>

        <junit.version>4.13.1</junit.version>
    </properties>

    <!-- Dependencies -->
    <dependencies>
        <!-- dLogger -->
        <dependency>
            <groupId>com.devamatre</groupId>
            <artifactId>dLogger</artifactId>
            <version>${dLogger.version}</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j-api.version}</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback-classic.version}</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok-version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.12.0</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.testng/testng -->
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>7.3.0</version>
            <scope>test</scope>
        </dependency>

        <!-- JUnit -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <!-- Build -->
    <build>
        <!-- To define the plugin version in your parent POM -->
        <pluginManagement>
            <plugins>
                <!--                <plugin>-->
                <!--                    <groupId>org.apache.maven.plugins</groupId>-->
                <!--                    <artifactId>maven-compiler-plugin</artifactId>-->
                <!--                    <configuration>-->
                <!--                        <source>${maven.compiler.source}</source>-->
                <!--                        <target>${maven.compiler.target}</target>-->
                <!--                    </configuration>-->
                <!--                </plugin>-->

                <plugin>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <configuration>
                        <descriptorRefs>
                            <descriptorRef>jar-with-dependencies</descriptorRef>
                        </descriptorRefs>
                    </configuration>
                </plugin>

            </plugins>
        </pluginManagement>
    </build>

    <!--    <repositories>-->
    <!--        <repository>-->
    <!--            <id>rslakra-repository-site</id>-->
    <!--            <url>https://github.com/rslakra/Releases.git</url>-->
    <!--        </repository>-->
    <!--    </repositories>-->

</project>
